--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.bg-weather {
+    background-image: url('/Designer.jpeg');
+    background-size: cover;
+    background-position: center center;
+    position: relative;
+}
+
+.glass-card {
+    width: 800px;
+    backdrop-filter: blur(5px);
+    background: rgba(255, 255, 255, 0.1);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.bg-weather::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    top: 0;
+    left: 0;
+    opacity: 0.7;
+}
